src/test/deca/syntax/invalid/parser/oracle/method_name2.deca

class A { a éa (){} }
